# qt-main-feedstock

./: .recipe_maintainers.json  .travis.yml  README.md  conda-forge.yml
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml
.ci_support/: linux_64_.yaml  linux_64_openssl1.1.1.yaml  linux_64_openssl3.yaml  linux_aarch64_.yaml  linux_aarch64_openssl1.1.1.yaml  linux_aarch64_openssl3.yaml  linux_ppc64le_.yaml  linux_ppc64le_openssl1.1.1.yaml  linux_ppc64le_openssl3.yaml  osx_64_.yaml  osx_64_openssl1.1.1.yaml  osx_64_openssl3.yaml  osx_arm64_.yaml  osx_arm64_openssl1.1.1.yaml  osx_arm64_openssl3.yaml  win_64_.yaml  win_64_openssl1.1.1.yaml  win_64_openssl3.yaml
.ci_support/migrations/: alsa_lib127.yaml  icu78.yaml
.github/: CODEOWNERS
.github/workflows/: conda-build.yml
.scripts/: build_steps.sh  run_osx_build.sh  run_win_build.bat
recipe/: 0010-qtmultimedia-novp9.patch  bld.bat  build.bat  build.sh  build_all.sh  conda_build_config.yaml  install.py  install_qt-gtk-platformtheme.sh  meta.yaml  recipe.yaml  run_test.bat  run_test.sh  yum_requirements.txt
recipe/patches/: 0001-CMake-Fix-user_facing_tool_links.txt-for-Apple-platf.patch  0001-qtbase-osx-allow-any-xcrun-in-PATH.patch  0002-qtbase-use-better-clang-optimize-size.patch  0003-qtbase-never-enable-new-dtags.patch  0003-qtbase-use-better-clang-optimize-size.patch  0004-qtbase-fix-harcoded-sysroot-paths.patch  0004-qttools-qunused.patch  0015-qt6-conf-osx.patch  (+49 more)
recipe/test/: CMakeLists.txt  main.pro  test_qlibraryinfo_prefixpath.cpp  test_qmimedatabase.cpp
